fix spacing: line height padding

--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -31,11 +31,12 @@
 .header {
   grid-area: header;
   width: 100vw;
+  padding: 1rem 0;
 }
 
 .sideNav {
   grid-area: sideNav;
-  padding: 12px;
+  padding: 1.5rem;
 }
 
 main {
@@ -68,7 +69,13 @@ main {
   padding: 1rem 0;
 }
 
+.summary {
+  padding: 1.5rem 0;
+}
+
 .textCol {
-  font-size: 1.25em;
+  font-size: 1.25rem;
   max-width: 750px;
+  line-height: 2.0rem;
+  
 }
