--- a/src/utils.css
+++ b/src/utils.css
@@ -70,3 +70,12 @@
 .bold {
   font-weight: bold;
 }
+
+.upper {
+  text-transform: uppercase;
+}
+
+.tightHeight {
+  line-height: .5rem;
+}
+
